--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,27 @@
 Package: xtreg2way
 Type: Package
 Title: Feasible Estimation of Robust Standard Errors in the Two-Way fixed effect model
-Version: 0.1.0
-Author: Brian Chivers
-Maintainer: Paulo Somaini <soma@stanford.edu>
+Version: 1.0.0
+Authors@R: c(
+    person("Brian", "Chivers", email = "bchivers@stanford.edu", role = "aut"),
+    person("Paulo", "Somaini", email = "soma@stanford.edu", role = "cre"))
 Description: Implemented is an algorithm to estimate the two-way fixed effect linear model. 
-    The coefficients of interest are computed using the residuals from the projection of all variables on the two sets of fixed effects. Our algorithm has three desirable features. 
-    First, it manages memory and computational resources efficiently which speeds up the computation of the estimates. 
-    Second, it allows the researcher to estimate multiple specifications using the same set of fixed effects at a very low computational cost. 
-    Third, the asymptotic variance of the parameters of interest can be consistently estimated using standard routines on the residualized data. 
-License: What license is it under?
+    The coefficients of interest are computed using the residuals from the 
+    projection of all variables on the two sets of fixed effects. Our algorithm
+    has three desirable features. First, it manages memory and computational 
+    resources efficiently which speeds up the computation of the estimates. 
+    Second, it allows the researcher to estimate multiple specifications 
+    using the same set of fixed effects at a very low computational cost. 
+    Third, the asymptotic variance of the parameters of interest can be 
+    consistently estimated using standard routines on the residualized data. 
+License: GPL-2
 Encoding: UTF-8
 LazyData: true
 Imports:
     pracma,
     Matrix
 RoxygenNote: 7.1.0
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
