--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,13 @@
 Package: xtreg2way
 Type: Package
-Title: Feasible Estimation of Robust Standard Errors in the Two-Way fixed effect model
+Title: Feasible Estimation of Robust Standard Errors in the Two-Way Fixed Effect Model
 Version: 1.0.0
 Authors@R: c(
     person("Brian", "Chivers", email = "bchivers@stanford.edu", role = "aut"),
-    person("Paulo", "Somaini", email = "soma@stanford.edu", role = "cre"))
+    person("Paulo", "Somaini", email = "soma@stanford.edu", role = c("aut","cre")))
+Author: Brian Chivers <bchivers@stanford.edu>
+        Paulo Somaini <soma@stanford.edu>
+Maintainer: Paulo Somaini <soma@stanford.edu>
 Description: Implemented is an algorithm to estimate the two-way fixed effect linear model. 
     The coefficients of interest are computed using the residuals from the 
     projection of all variables on the two sets of fixed effects. Our algorithm
@@ -19,7 +22,8 @@ Encoding: UTF-8
 LazyData: true
 Imports:
     pracma,
-    Matrix
+    Matrix,
+    stats
 RoxygenNote: 7.1.0
 Suggests: 
     knitr,
