dof and redundancy additions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,10 @@
 S3method(xtreg2way,default)
 S3method(xtreg2way,formula)
 export(avar)
+export(ids_with_multiple_obs)
+export(nonredundant)
 export(projdummies)
 export(projvar)
 export(regress1)
+export(where_id_with_single_obs)
 export(xtreg2way)
