--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,9 +3,9 @@ Type: Package
 Title: Feasible Estimation of Robust Standard Errors in the Two-Way Fixed Effect Model
 Version: 1.0.0
 Authors@R: c(
-    person("Paulo", "Somaini", email = "soma@stanford.edu", role = c("aut")),
+    person("Paulo", "Somaini", email = "soma@stanford.edu", role = c("aut", "cre")),
     person("Frank", "Wolak", email= "wolak@stanford.edu", role=c("aut")),
-    person("Brian", "Chivers", email = "bchivers@stanford.edu", role = c("aut","cre")))
+    person("Brian", "Chivers", email = "bchivers@stanford.edu", role = c("aut")))
 Description: Implemented is an algorithm to estimate the two-way fixed effect linear model. 
     The coefficients of interest are computed using the residuals from the 
     projection of all variables on the two sets of fixed effects. Our algorithm
